* 0.4.2
- Added the pad_expiration option which tells pam_usb how often pads
  should be updated in order to reduce device writing.
- Support for time options in the configuration parser (5s, 2h, 10m, etc)
- Added the --verbose option to pamusb-conf
- Fixed the ElementTree import statement of pamusb-agent to work with
  Python 2.5. Thanks to Donald Hayward <liquidsunshine@gmail.com> for
  the patch.
- Fixed pamusb-conf to work without vendor and product name
- Improved the device detection to work with any removable storage device.
  Thanks to Guillermo Antonio Amaral Bastidas <me@guillermoamaral.com>
  for providing the patch.
- Added a workaround for a DBUS bug that prevented pam_usb to work with su.
  https://bugs.freedesktop.org/show_bug.cgi?id=11876
- Disable log outputting if the application doesn't have any tty
  attached (fixes gksudo and other software).
- Various minor bugfix

* 0.4.1
- Fixed a security issue related to OpenSSH authentication
- Fixed the quiet option (now it is really quiet)
- Support for devices without vendor/model information

* 0.4.0
- Both pam_usb and its tools (adm, hotplug) have been redesigned from the
  ground up and rewritten from scratch.
- Hardware recognition is now done through HAL which provides a stable
  interface over kernel changes.
- Certificates have been replaced by one time pads. That will prevent
  copies of the USB device to be used for authentication.
- Device's manufacturer properties verification. pam_usb now verifies
  device informations (vendor, product, serial number, UUID) in the
  authentication process.
- Configuration is now handled in a central place, the pamusb.conf
  configuration file. This XML file contains configuration entries for
  users, devices and services.
- pamusb-agent (formely usbhotplug) make use of DBUS signals (sent by HAL)
  instead of kernel hotplugging. Also, its configuration has been merged
  into the pamusb.conf configuration file.