@@ -29,12 +29,26 @@ See http://www.pamusb.org/doc/configuring
 
 	<!-- User settings -->
 	<users>
+		<!-- Note: Use pamusb-conf to add a user, then you can tweak
+		 	manually the configuration here if needed.
+		-->
+
 		<!-- Example:
+			Authenticate user scox using "MyDevice", and configure pamusb-agent
+			to automatically start/stop gnome-screensaver on key insertion and
+			removal:
 			<user id="scox">
 				<device>MyDevice</device>
 				<option name="quiet">true</option>
 				<agent event="lock">gnome-screensaver-command -lock</agent>
 				<agent event="unlock">gnome-screensaver-command -deactivate</agent>
+			</user>
+
+			Configure user root to authenticate using MyDevice, but update one
+			time pads at every login (default is 1 hour):
+			<user id="root">
+				<device>MyDevice</device>
+				<option name="pad_expiration">0</option>
 			</user>
 		-->
 	</users>
